# panoramic

./: .gitignore  CMakeLists.txt  Makefile  README.md  _config.yml  benchmark.txt  main.cpp
.github/workflows/: jekyll-gh-pages.yml
pano/: CMakeLists.txt  common.cpp  stitcher.cpp
pano/cuda/: CMakeLists.txt  cudaHarrisDet.cu  cudaHarrisMatch.cu  cudaRansac.cu
pano/include/: common.hpp  detector.hpp  matcher.hpp  options.hpp  pano.hpp  ransac.hpp  stitcher.hpp  warp.hpp
pano/mpi/: CMakeLists.txt  mpiHarrisDet.cpp  mpiHarrisMatch.cpp  mpiRansac.cpp
pano/opencv/: CMakeLists.txt  ocvHarrisDet.cpp  ocvHarrisMatch.cpp  ocvRansac.cpp  ocvSiftDet.cpp  ocvSiftMatch.cpp  ocvWarp.cpp
pano/openmp/: CMakeLists.txt  ompHarrisDet.cpp  ompHarrisMatch.cpp  ompRansac.cpp
pano/seq/: CMakeLists.txt  seqHarrisDet.cpp  seqHarrisMatch.cpp  seqRansac.cpp  seqWarp.cpp  seq_detector.cpp  seq_harrisdet.cpp
